--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -6,13 +6,13 @@
     <div class="col-md-6">
       <b> Name:</b> {{user.name}} <br />
       <b> Email:</b>{{user.email}} <br />
-      <b> Cooks for:</b>{{user.cooking_for}} <br />
+
       <b> Allergies:</b>{{user.allergies}} <br />
     </div>
     <div class="col-md-6">
       <h3>Actions</h3>
-      <a href="/user/edit" class="btn">Edit profile</a> <br />
-      <a href="/user/delete" class="btn btn-danger">Delete profile</a>
+      <a href="/user/edit" class="btn m-1">Edit profile</a> <br />
+      <a href="/user/delete" class="btn m-1 btn-danger">Delete profile</a>
     </div>
   </div>
 </div>
