--- a/templates/edit-note.html
+++ b/templates/edit-note.html
@@ -7,10 +7,10 @@
         <img
           class="card-img-top"
           src="{{recipe.image_url}}"
-          alt="{{recipe.title}}"
+          alt="{{recipe.name}}"
         />
         <div class="card-body">
-          <h6 class="card-title">{{recipe.title}}</h6>
+          <h6 class="card-title">{{recipe.name}}</h6>
           <p class="card-text">
             <a href="{{recipe.sourceUrl}}">See the original </a> <br />
             <b>Ready In:</b>
