--- a/templates/recipe-search.html
+++ b/templates/recipe-search.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="form-row">
-        <div class="col">
+        <div class="col-12 col-md-6">
           <label for="includeIngredients">Must include:</label>
           <input
             id="includeIngredients"
@@ -27,7 +27,7 @@
             class="form-control"
           />
         </div>
-        <div class="col">
+        <div class="col-12 col-md-6">
           <label for="excludeIngredients">Must exclude:</label>
           <input
             id="excludeIngredients"
