--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,21 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md justify-content-between">
+    <nav class="navbar bg-light navbar-expand-md justify-content-between">
       <a class="navbar-brand" href="/">Recipe Box</a>
-      <div class="collapse navbar-collapse">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="/advanced_search">Advanced Search</a>
@@ -71,13 +83,13 @@
           id="search"
         />
 
-        <button class="btn btn-default" id="search-bar-btn" type="submit">
+        <button class="btn btn-default p-2" id="search-bar-btn" type="submit">
           <span class="fa fa-search"></span>
         </button>
       </form>
     </nav>
 
-    <div class="container content">
+    <div class="content">
       {% for category, message in get_flashed_messages(with_categories=True) %}
       <div class="alert alert-{{ category }} m-1">{{ message }}</div>
       {% endfor %} {% block content %} {% endblock %}
