--- a/templates/recipe-results.html
+++ b/templates/recipe-results.html
@@ -16,15 +16,20 @@
             >Get more information</a
           >
           {% if g.user %}
+          <!--  -->
+          {% if item.id in g.user_recipes %}
+          <form method="GET" action="/unsave_recipe/{{item.id}}">
+            <button class="btn remove-recipe m-1">
+              Unsave recipe
+            </button>
+          </form>
+          {% else %}
           <form method="GET" action="/save_to_recipebox/{{item.id}}">
-            <button
-              class="btn btn-secondary btn-sm add-recipe m-1"
-              data-id="{{item.id}}"
-            >
+            <button class="btn btn-secondary btn-sm add-recipe m-1">
               Save recipe
             </button>
           </form>
-          {% endif %}
+          {% endif %} {% endif %}
         </div>
       </div>
     </div>
