--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -3,16 +3,21 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
-      <b> Name:</b> {{user.name}} <br />
-      <b> Email:</b>{{user.email}} <br />
+    <div class="col">
+      <b> Name: </b> {{user.name}} <br />
+      <b> Email: </b>{{user.email}} <br />
 
-      <b> Allergies:</b>{{user.allergies}} <br />
-    </div>
-    <div class="col-md-6">
-      <h3>Actions</h3>
-      <a href="/user/edit" class="btn m-1">Edit profile</a> <br />
-      <a href="/user/delete" class="btn m-1 btn-danger">Delete profile</a>
+      <b> Allergies: </b>{{user.allergies}} <br />
+      <div class="m-3">
+        <h5>Actions</h5>
+        <a href="/user/edit" class="btn m-1 edit-profile float-left"
+          >Edit profile</a
+        >
+
+        <a href="/user/delete" class="btn m-1 delete-profile float-left"
+          >Delete profile</a
+        >
+      </div>
     </div>
   </div>
 </div>
