--- a/templates/recipe-results.html
+++ b/templates/recipe-results.html
@@ -25,7 +25,9 @@
           </form>
           {% else %}
           <form method="GET" action="/save_to_recipebox/{{item.id}}">
-            <button class="btn btn-secondary btn-sm add-recipe m-1">
+            <button
+              class="btn btn-secondary btn-sm add-recipe btn-info teal-fill-btn m-1"
+            >
               Save recipe
             </button>
           </form>
