--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -9,14 +9,13 @@
 
       <b> Allergies: </b>{{user.allergies}} <br />
       <div class="m-3">
-        <h5>Actions</h5>
-        <a href="/user/edit" class="btn m-1 edit-profile float-left"
-          >Edit profile</a
-        >
+        <a href="/user/edit" class="btn m-2 mx-3 edit-profile-btn float-left">
+          <i class="fas fa-edit"></i> Edit profile
+        </a>
 
-        <a href="/user/delete" class="btn m-1 delete-profile float-left"
-          >Delete profile</a
-        >
+        <a href="/user/delete" class="btn m-2 delete-profile-btn float-left">
+          <i class="fas fa-user-slash"></i> Delete profile
+        </a>
       </div>
     </div>
   </div>
