--- a/templates/user/saved-recipes.html
+++ b/templates/user/saved-recipes.html
@@ -12,7 +12,7 @@
         <h5 class="card-title">{{item.name}}</h5></a
         >
         <p>
-          <a href="/recipe/edit/{{item.id}}" class="btn btn-sm m-1 edit-note-btn"
+          <a href="/recipe/edit/{{item.id}}" class="btn btn-sm m-1 edit-note-btn" data-toggle="tooltip" data-placement="bottom" title="Edit Notes"
             ><i class="fas fa-edit"></i></a
           ><b>Notes:</b> {{item.notes}}
         </p>
