--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
   <body>
     <nav class="navbar bg-light navbar-expand-md justify-content-between">
-      <a class="navbar-brand" href="/">Recipe Box</a>
+      <a class="nav-logo py-2" href="/">Recipe Box</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -41,7 +41,9 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+        <span class="navbar-toggler-icon order-md-0 order-last"
+          ><i class="fas fa-bars"></i
+        ></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -75,7 +77,7 @@
 
       <form class="form-inline" id="search-bar-form" action="/search">
         <input
-          class="form-control mr-sm-2"
+          class="form-control mr-sm-2 mb-2 mb-md-0"
           type="search"
           placeholder="Search for recipes"
           aria-label="Search"
