--- a/templates/recipe-results.html
+++ b/templates/recipe-results.html
@@ -34,7 +34,7 @@
           </form>
           {% else %}
           <form method="GET" action="/save_to_recipebox/{{item.id}}">
-            <button class="btn btn-sm add-recipe teal-btn m-1">
+            <button class="btn btn-sm add-recipe m-1">
               Save recipe
             </button>
           </form>
