--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,15 @@
       rel="stylesheet"
       href="https://unpkg.com/bootstrap/dist/css/bootstrap.css"
     />
+
+    <!-- <link rel="shortcut icon" href="/folder-name/logo.ico">
+   -->
+    <link rel="shortcut icon" href="https://cdn3.iconfinder.com/data/icons/hobby/64/cooking-food-restaurant-pot-512.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn3.iconfinder.com/dsata/icons/hobby/64/cooking-food-restaurant-pot-512.png"
+    />
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -16,7 +25,6 @@
     ></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.js"></script>
 
     <link
       rel="stylesheet"
