--- a/templates/home-anon.html
+++ b/templates/home-anon.html
@@ -4,14 +4,22 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h4>New here?</h4>
-      <p>Sign up to discover new recipes and take notes!</p>
-      <a href="/user/signup" class="btn btn-outline-info teal-btn">Sign up</a>
+      <img
+        src="/static/images/undraw_healthy_options_sdo3.svg"
+        alt="Chef"
+        class="home-pic"
+      />
     </div>
     <div class="col">
+      <h4>New here?</h4>
+      <p>Start discovering new recipes and keep notes!</p>
+
+      <a href="/user/signup" class="btn">Sign up</a>
+      <hr />
       <h4>Have an account?</h4>
       <p>Let's cook! <i class="fas fa-utensils"></i></p>
-      <a href="/user/login" class="btn">Log in</a>
+
+      <a href="/user/login" class="btn log-in-pg-btn">Log in</a>
     </div>
   </div>
 </div>
