--- a/templates/recipe-info.html
+++ b/templates/recipe-info.html
@@ -70,7 +70,7 @@
 </div>
 
 <div class="container recipe-cards similar">
-  <h4 class="pt-4 m-2 text-center">Similar Recipes:</h4>
+  <h4 class="pt-4 pb-2 m-2 text-center">Similar Recipes:</h4>
   <div class="card-deck mb-4">
     {% for recipe in similar %}
     <div class="card p-2 pl-3">
