created explore page

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,10 @@
 
     <!-- <link rel="shortcut icon" href="/folder-name/logo.ico">
    -->
-    <link rel="shortcut icon" href="https://cdn3.iconfinder.com/data/icons/hobby/64/cooking-food-restaurant-pot-512.png" />
+    <link
+      rel="shortcut icon"
+      href="https://cdn3.iconfinder.com/data/icons/hobby/64/cooking-food-restaurant-pot-512.png"
+    />
     <link
       rel="icon"
       type="image/png"
